t2/y.output

state 0
	$accept : .start $end 

	MATERIAL  shift 9
	OBJECT  shift 8
	GLOBAL  shift 10
	.  error

	plan  goto 2
	stmnt  goto 3
	declaration  goto 4
	material  goto 6
	object  goto 5
	start  goto 1
	global  goto 7

state 1
	$accept :  start.$end 

	$end  accept
	.  error


state 2
	start :  plan.    (1)
	plan :  plan.stmnt 

	MATERIAL  shift 9
	OBJECT  shift 8
	GLOBAL  shift 10
	.  reduce 1 (src line 69)

	stmnt  goto 11
	declaration  goto 4
	material  goto 6
	object  goto 5
	global  goto 7

state 3
	plan :  stmnt.    (3)

	.  reduce 3 (src line 74)


state 4
	stmnt :  declaration.    (4)

	.  reduce 4 (src line 77)


state 5
	stmnt :  object.    (5)

	.  reduce 5 (src line 79)


state 6
	declaration :  material.    (6)

	.  reduce 6 (src line 83)


state 7
	declaration :  global.    (7)

	.  reduce 7 (src line 85)


state 8
	object :  OBJECT.variable params = objective 

	ID  shift 13
	.  error

	variable  goto 12

state 9
	material :  MATERIAL.variable { properties } 

	ID  shift 13
	.  error

	variable  goto 14

state 10
	global :  GLOBAL.{ glist } 

	{  shift 15
	.  error


state 11
	plan :  plan stmnt.    (2)

	.  reduce 2 (src line 72)


state 12
	object :  OBJECT variable.params = objective 
	empty : .    (86)

	(  shift 17
	.  reduce 86 (src line 278)

	params  goto 16
	empty  goto 18

state 13
	variable :  ID.    (85)

	.  reduce 85 (src line 275)


state 14
	material :  MATERIAL variable.{ properties } 

	{  shift 19
	.  error


state 15
	global :  GLOBAL {.glist } 

	ID  shift 13
	.  error

	variable  goto 22
	glist  goto 20
	gequals  goto 21

state 16
	object :  OBJECT variable params.= objective 

	=  shift 23
	.  error


state 17
	params :  (.idlist ) 

	ID  shift 13
	.  error

	idlist  goto 24
	variable  goto 25

state 18
	params :  empty.    (21)

	.  reduce 21 (src line 121)


state 19
	material :  MATERIAL variable {.properties } 

	PROPERTIES  shift 28
	.  error

	property  goto 27
	properties  goto 26

state 20
	global :  GLOBAL { glist.} 
	glist :  glist., gequals 

	}  shift 29
	,  shift 30
	.  error


state 21
	glist :  gequals.    (17)

	.  reduce 17 (src line 110)


state 22
	gequals :  variable.= constant 

	=  shift 31
	.  error


state 23
	object :  OBJECT variable params =.objective 

	ID  shift 13
	CYLINDER  shift 43
	BLOCK  shift 44
	SPHERE  shift 45
	IF  shift 37
	FOR  shift 38
	SWITCH  shift 39
	(  shift 41
	.  error

	csg  goto 36
	primitive  goto 40
	for  goto 34
	switch  goto 35
	variable  goto 46
	objective  goto 32
	if  goto 33
	terminal  goto 42

state 24
	params :  ( idlist.) 

	)  shift 47
	.  error


state 25
	idlist :  variable.    (22)
	idlist :  variable., idlist 

	,  shift 48
	.  reduce 22 (src line 124)


state 26
	material :  MATERIAL variable { properties.} 
	properties :  properties.property 

	PROPERTIES  shift 28
	}  shift 49
	.  error

	property  goto 50

state 27
	properties :  property.    (10)

	.  reduce 10 (src line 93)


state 28
	property :  PROPERTIES.variable { plist } 

	ID  shift 13
	.  error

	variable  goto 51

state 29
	global :  GLOBAL { glist }.    (15)

	.  reduce 15 (src line 107)


state 30
	glist :  glist ,.gequals 

	ID  shift 13
	.  error

	variable  goto 22
	gequals  goto 52

state 31
	gequals :  variable =.constant 

	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	.  error

	constant  goto 53

state 32
	object :  OBJECT variable params = objective.    (19)

	.  reduce 19 (src line 116)


state 33
	objective :  if.    (24)

	.  reduce 24 (src line 129)


state 34
	objective :  for.    (25)

	.  reduce 25 (src line 131)


state 35
	objective :  switch.    (26)

	.  reduce 26 (src line 133)


state 36
	objective :  csg.    (27)
	csg :  csg.| csg 
	csg :  csg.& csg 
	csg :  csg.- csg 
	csg :  csg.+ csg 
	csg :  csg.* [ triple ] 

	|  shift 57
	&  shift 58
	+  shift 60
	-  shift 59
	*  shift 61
	.  reduce 27 (src line 135)


state 37
	if :  IF.conditional THEN objective ELSE objective 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 63
	conditional  goto 62
	constant  goto 66
	variable  goto 65

state 38
	for :  FOR.ID IN range DO objective 

	ID  shift 67
	.  error


state 39
	switch :  SWITCH.( expression ) IN { alternatives } 

	(  shift 68
	.  error


state 40
	csg :  primitive.    (36)

	.  reduce 36 (src line 160)


state 41
	csg :  (.csg ) 

	ID  shift 13
	CYLINDER  shift 43
	BLOCK  shift 44
	SPHERE  shift 45
	(  shift 41
	.  error

	csg  goto 69
	primitive  goto 40
	variable  goto 46
	terminal  goto 42

state 42
	primitive :  terminal.postpositions location 
	empty : .    (86)

	:  shift 71
	.  reduce 86 (src line 278)

	postpositions  goto 70
	empty  goto 72

state 43
	terminal :  CYLINDER.( double ) 

	(  shift 73
	.  error


state 44
	terminal :  BLOCK.( triple ) 

	(  shift 74
	.  error


state 45
	terminal :  SPHERE.( expression ) 

	(  shift 75
	.  error


state 46
	terminal :  variable.optionalList 
	empty : .    (86)

	(  shift 77
	.  reduce 86 (src line 278)

	optionalList  goto 76
	empty  goto 78

state 47
	params :  ( idlist ).    (20)

	.  reduce 20 (src line 119)


state 48
	idlist :  variable ,.idlist 

	ID  shift 13
	.  error

	idlist  goto 79
	variable  goto 25

state 49
	material :  MATERIAL variable { properties }.    (8)

	.  reduce 8 (src line 88)


state 50
	properties :  properties property.    (9)

	.  reduce 9 (src line 91)


state 51
	property :  PROPERTIES variable.{ plist } 

	{  shift 80
	.  error


state 52
	glist :  glist , gequals.    (16)

	.  reduce 16 (src line 109)


state 53
	gequals :  variable = constant.    (18)

	.  reduce 18 (src line 112)


state 54
	constant :  INTEGER.    (82)

	.  reduce 82 (src line 265)


state 55
	constant :  FLOAT.    (83)

	.  reduce 83 (src line 267)


state 56
	constant :  STRING.    (84)

	.  reduce 84 (src line 269)


state 57
	csg :  csg |.csg 

	ID  shift 13
	CYLINDER  shift 43
	BLOCK  shift 44
	SPHERE  shift 45
	(  shift 41
	.  error

	csg  goto 81
	primitive  goto 40
	variable  goto 46
	terminal  goto 42

state 58
	csg :  csg &.csg 

	ID  shift 13
	CYLINDER  shift 43
	BLOCK  shift 44
	SPHERE  shift 45
	(  shift 41
	.  error

	csg  goto 82
	primitive  goto 40
	variable  goto 46
	terminal  goto 42

state 59
	csg :  csg -.csg 

	ID  shift 13
	CYLINDER  shift 43
	BLOCK  shift 44
	SPHERE  shift 45
	(  shift 41
	.  error

	csg  goto 83
	primitive  goto 40
	variable  goto 46
	terminal  goto 42

state 60
	csg :  csg +.csg 

	ID  shift 13
	CYLINDER  shift 43
	BLOCK  shift 44
	SPHERE  shift 45
	(  shift 41
	.  error

	csg  goto 84
	primitive  goto 40
	variable  goto 46
	terminal  goto 42

state 61
	csg :  csg *.[ triple ] 

	[  shift 85
	.  error


state 62
	if :  IF conditional.THEN objective ELSE objective 

	THEN  shift 86
	.  error


state 63
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 
	conditional :  expression.LE expression 
	conditional :  expression.LT expression 
	conditional :  expression.EQ expression 
	conditional :  expression.GE expression 
	conditional :  expression.GT expression 
	conditional :  expression.NE expression 

	LT  shift 93
	LE  shift 92
	EQ  shift 94
	GE  shift 95
	GT  shift 96
	NE  shift 97
	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	.  error


state 64
	expression :  -.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 98
	constant  goto 66
	variable  goto 65

state 65
	expression :  variable.    (73)
	expression :  variable.( list ) 

	(  shift 99
	.  reduce 73 (src line 245)


state 66
	expression :  constant.units 
	empty : .    (86)

	IN  shift 101
	FT  shift 102
	M  shift 103
	CM  shift 104
	MM  shift 105
	STRING  shift 106
	.  reduce 86 (src line 278)

	units  goto 100
	empty  goto 107

state 67
	for :  FOR ID.IN range DO objective 

	IN  shift 108
	.  error


state 68
	switch :  SWITCH (.expression ) IN { alternatives } 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 109
	constant  goto 66
	variable  goto 65

state 69
	csg :  csg.| csg 
	csg :  csg.& csg 
	csg :  csg.- csg 
	csg :  csg.+ csg 
	csg :  csg.* [ triple ] 
	csg :  ( csg.) 

	|  shift 57
	&  shift 58
	+  shift 60
	-  shift 59
	*  shift 61
	)  shift 110
	.  error


state 70
	primitive :  terminal postpositions.location 
	empty : .    (86)

	AT  shift 112
	.  reduce 86 (src line 278)

	location  goto 111
	empty  goto 113

state 71
	postpositions :  :.property_list 

	ID  shift 13
	.  error

	property_list  goto 114
	variable  goto 115

state 72
	postpositions :  empty.    (45)

	.  reduce 45 (src line 180)


state 73
	terminal :  CYLINDER (.double ) 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	double  goto 116
	expression  goto 117
	constant  goto 66
	variable  goto 65

state 74
	terminal :  BLOCK (.triple ) 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	triple  goto 118
	expression  goto 119
	constant  goto 66
	variable  goto 65

state 75
	terminal :  SPHERE (.expression ) 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 120
	constant  goto 66
	variable  goto 65

state 76
	terminal :  variable optionalList.    (51)

	.  reduce 51 (src line 194)


state 77
	optionalList :  (.list ) 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	list  goto 121
	expression  goto 122
	constant  goto 66
	variable  goto 65

state 78
	optionalList :  empty.    (53)

	.  reduce 53 (src line 199)


state 79
	idlist :  variable , idlist.    (23)

	.  reduce 23 (src line 126)


state 80
	property :  PROPERTIES variable {.plist } 

	ID  shift 13
	.  error

	variable  goto 125
	plist  goto 123
	pequals  goto 124

state 81
	csg :  csg.| csg 
	csg :  csg | csg.    (37)
	csg :  csg.& csg 
	csg :  csg.- csg 
	csg :  csg.+ csg 
	csg :  csg.* [ triple ] 

	+  shift 60
	-  shift 59
	*  shift 61
	.  reduce 37 (src line 162)


state 82
	csg :  csg.| csg 
	csg :  csg.& csg 
	csg :  csg & csg.    (38)
	csg :  csg.- csg 
	csg :  csg.+ csg 
	csg :  csg.* [ triple ] 

	+  shift 60
	-  shift 59
	*  shift 61
	.  reduce 38 (src line 164)


state 83
	csg :  csg.| csg 
	csg :  csg.& csg 
	csg :  csg.- csg 
	csg :  csg - csg.    (39)
	csg :  csg.+ csg 
	csg :  csg.* [ triple ] 

	*  shift 61
	.  reduce 39 (src line 166)


state 84
	csg :  csg.| csg 
	csg :  csg.& csg 
	csg :  csg.- csg 
	csg :  csg.+ csg 
	csg :  csg + csg.    (40)
	csg :  csg.* [ triple ] 

	*  shift 61
	.  reduce 40 (src line 168)


state 85
	csg :  csg * [.triple ] 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	triple  goto 126
	expression  goto 119
	constant  goto 66
	variable  goto 65

state 86
	if :  IF conditional THEN.objective ELSE objective 

	ID  shift 13
	CYLINDER  shift 43
	BLOCK  shift 44
	SPHERE  shift 45
	IF  shift 37
	FOR  shift 38
	SWITCH  shift 39
	(  shift 41
	.  error

	csg  goto 36
	primitive  goto 40
	for  goto 34
	switch  goto 35
	variable  goto 46
	objective  goto 127
	if  goto 33
	terminal  goto 42

state 87
	expression :  expression +.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 128
	constant  goto 66
	variable  goto 65

state 88
	expression :  expression -.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 129
	constant  goto 66
	variable  goto 65

state 89
	expression :  expression *.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 130
	constant  goto 66
	variable  goto 65

state 90
	expression :  expression /.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 131
	constant  goto 66
	variable  goto 65

state 91
	expression :  expression EXP.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 132
	constant  goto 66
	variable  goto 65

state 92
	conditional :  expression LE.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 133
	constant  goto 66
	variable  goto 65

state 93
	conditional :  expression LT.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 134
	constant  goto 66
	variable  goto 65

state 94
	conditional :  expression EQ.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 135
	constant  goto 66
	variable  goto 65

state 95
	conditional :  expression GE.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 136
	constant  goto 66
	variable  goto 65

state 96
	conditional :  expression GT.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 137
	constant  goto 66
	variable  goto 65

state 97
	conditional :  expression NE.expression 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	expression  goto 138
	constant  goto 66
	variable  goto 65

state 98
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 
	expression :  - expression.    (72)

	EXP  shift 91
	.  reduce 72 (src line 243)


state 99
	expression :  variable (.list ) 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	list  goto 139
	expression  goto 122
	constant  goto 66
	variable  goto 65

state 100
	expression :  constant units.    (74)

	.  reduce 74 (src line 247)


state 101
	units :  IN.    (60)

	.  reduce 60 (src line 218)


state 102
	units :  FT.    (61)

	.  reduce 61 (src line 220)


state 103
	units :  M.    (62)

	.  reduce 62 (src line 222)


state 104
	units :  CM.    (63)

	.  reduce 63 (src line 224)


state 105
	units :  MM.    (64)

	.  reduce 64 (src line 226)


state 106
	units :  STRING.    (65)

	.  reduce 65 (src line 228)


state 107
	units :  empty.    (66)

	.  reduce 66 (src line 230)


state 108
	for :  FOR ID IN.range DO objective 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	range  goto 140
	expression  goto 141
	constant  goto 66
	variable  goto 65

state 109
	switch :  SWITCH ( expression.) IN { alternatives } 
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	)  shift 142
	.  error


state 110
	csg :  ( csg ).    (42)

	.  reduce 42 (src line 172)


state 111
	primitive :  terminal postpositions location.    (43)

	.  reduce 43 (src line 175)


state 112
	location :  AT.[ triple ] 

	[  shift 143
	.  error


state 113
	location :  empty.    (57)

	.  reduce 57 (src line 209)


state 114
	postpositions :  : property_list.    (44)
	property_list :  property_list.variable 

	ID  shift 13
	.  reduce 44 (src line 178)

	variable  goto 144

state 115
	property_list :  variable.    (47)

	.  reduce 47 (src line 185)


state 116
	terminal :  CYLINDER ( double.) 

	)  shift 145
	.  error


state 117
	double :  expression., expression 
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	,  shift 146
	.  error


state 118
	terminal :  BLOCK ( triple.) 

	)  shift 147
	.  error


state 119
	triple :  expression., expression , expression 
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	,  shift 148
	.  error


state 120
	terminal :  SPHERE ( expression.) 
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	)  shift 149
	.  error


state 121
	optionalList :  ( list.) 

	)  shift 150
	.  error


state 122
	list :  expression.    (54)
	list :  expression., list 
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	,  shift 151
	.  reduce 54 (src line 202)


state 123
	property :  PROPERTIES variable { plist.} 
	plist :  plist., pequals 

	}  shift 152
	,  shift 153
	.  error


state 124
	plist :  pequals.    (13)

	.  reduce 13 (src line 101)


state 125
	pequals :  variable.= constant 

	=  shift 154
	.  error


state 126
	csg :  csg * [ triple.] 

	]  shift 155
	.  error


state 127
	if :  IF conditional THEN objective.ELSE objective 

	ELSE  shift 156
	.  error


state 128
	expression :  expression.+ expression 
	expression :  expression + expression.    (67)
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 

	EXP  shift 91
	*  shift 89
	/  shift 90
	.  reduce 67 (src line 233)


state 129
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression - expression.    (68)
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 

	EXP  shift 91
	*  shift 89
	/  shift 90
	.  reduce 68 (src line 235)


state 130
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression * expression.    (69)
	expression :  expression./ expression 
	expression :  expression.EXP expression 

	EXP  shift 91
	.  reduce 69 (src line 237)


state 131
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression / expression.    (70)
	expression :  expression.EXP expression 

	EXP  shift 91
	.  reduce 70 (src line 239)


state 132
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 
	expression :  expression EXP expression.    (71)

	EXP  shift 91
	.  reduce 71 (src line 241)


state 133
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 
	conditional :  expression LE expression.    (76)

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	.  reduce 76 (src line 252)


state 134
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 
	conditional :  expression LT expression.    (77)

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	.  reduce 77 (src line 254)


state 135
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 
	conditional :  expression EQ expression.    (78)

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	.  reduce 78 (src line 256)


state 136
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 
	conditional :  expression GE expression.    (79)

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	.  reduce 79 (src line 258)


state 137
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 
	conditional :  expression GT expression.    (80)

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	.  reduce 80 (src line 260)


state 138
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 
	conditional :  expression NE expression.    (81)

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	.  reduce 81 (src line 262)


state 139
	expression :  variable ( list.) 

	)  shift 157
	.  error


state 140
	for :  FOR ID IN range.DO objective 

	DO  shift 158
	.  error


state 141
	range :  expression.: expression 
	expression :  expression.+ expression 
	expression :  expression.- expression 
	expression :  expression.* expression 
	expression :  expression./ expression 
	expression :  expression.EXP expression 

	EXP  shift 91
	+  shift 87
	-  shift 88
	*  shift 89
	/  shift 90
	:  shift 159
	.  error


state 142
	switch :  SWITCH ( expression ).IN { alternatives } 

	IN  shift 160
	.  error


state 143
	location :  AT [.triple ] 

	ID  shift 13
	INTEGER  shift 54
	FLOAT  shift 55
	STRING  shift 56
	-  shift 64
	.  error

	triple  goto 161
	expression  goto 119
	constant  goto 66
	variable  goto 65

state 144
	property_list :  property_list variable.    (46)

	.  reduce 46 (src line 183)


state 145
	terminal :  CYLINDER ( double ).    (48)

	.  reduce 48 (src line 188)


state 146
	double :  expression ,.expression 
